--- a/lab13/style.css
+++ b/lab13/style.css
@@ -1,5 +1,5 @@
 body{font-family: Verdana, sans-serif; color: #0d1217;background-color:#d6dcdf;}
-h1,h2 {color: #66a2f0;}
+h1,h2 {color: #125BBA;}
 a {color: #b683f5;}
 .evenrow {background-color: #8f8f8fec;}
 .caption{color: #66a2f0;}
