--- a/lab13/style.css
+++ b/lab13/style.css
@@ -3,7 +3,7 @@ h1,h2 {color: #125BBA;}
 a {color: #b683f5;}
 .evenrow {background-color: #8f8f8fec;}
 .caption{color: #66a2f0;}
-nav a {color: #395ae0;}
+nav a {color: #5A1CA6;}
 nav a:hover {background-color: #f6f6f9;}
 nav {padding: 10px;}
 nav {margin-bottom: 10px;}
