--- a/lab13/style.css
+++ b/lab13/style.css
@@ -1,9 +1,9 @@
 body{font-family: Verdana, sans-serif; color: #0d1217;background-color:#d6dcdf;}
 h1,h2 {color: #125BBA;}
-a {color: #b683f5;}
+a {color: #5f4185;}
 .evenrow {background-color: #8f8f8fec;}
 .caption{color: #66a2f0;}
-nav a {color: #5A1CA6;}
+nav a {color: #512f78;}
 nav a:hover {background-color: #f6f6f9;}
 nav {padding: 10px;}
 nav {margin-bottom: 10px;}
